--- a/.github/workflows/pre-commit.yml
+++ b/.github/workflows/pre-commit.yml
@@ -12,38 +12,55 @@ jobs:
   pre-commit:
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v3
-      - uses: actions/setup-python@v4
+      - uses: actions/checkout@v4
+
+      - name: Set up Python
+        uses: actions/setup-python@v5
         with:
           python-version: '3.11'
-          cache: pip
-      - name: Install pre-commit
+
+      - name: Install uv
+        uses: astral-sh/setup-uv@v3
+        with:
+          enable-cache: true
+          cache-dependency-glob: "uv.lock"
+
+      - name: Install dependencies
         run: |
-          python -m pip install --upgrade pip
-          pip install pre-commit
+          uv sync --all-extras --dev
+
       - name: Run pre-commit
-        run: pre-commit run --all-files
+        run: uv run pre-commit run --all-files
 
   auto-fix:
     runs-on: ubuntu-latest
     if: github.event_name == 'push' || github.event_name == 'schedule'
     steps:
-      - uses: actions/checkout@v3
+      - uses: actions/checkout@v4
         with:
           fetch-depth: 0
-      - uses: actions/setup-python@v4
+
+      - name: Set up Python
+        uses: actions/setup-python@v5
         with:
           python-version: '3.11'
-          cache: pip
-      - name: Install pre-commit
+
+      - name: Install uv
+        uses: astral-sh/setup-uv@v3
+        with:
+          enable-cache: true
+          cache-dependency-glob: "uv.lock"
+
+      - name: Install dependencies
         run: |
-          python -m pip install --upgrade pip
-          pip install pre-commit
+          uv sync --all-extras --dev
+
       - name: Run pre-commit with auto-fixes
         id: precommit
         continue-on-error: true
         run: |
-          pre-commit run --all-files || echo "CHANGES_MADE=true" >> $GITHUB_ENV
+          uv run pre-commit run --all-files || echo "CHANGES_MADE=true" >> $GITHUB_ENV
+
       - name: Create Pull Request
         if: env.CHANGES_MADE == 'true'
         uses: peter-evans/create-pull-request@v5
