--- a/.github/workflows/python-test-publish.yml
+++ b/.github/workflows/python-test-publish.yml
@@ -16,27 +16,35 @@ jobs:
         python-version: ['3.10', '3.11', '3.12']
 
     steps:
-    - uses: actions/checkout@v3
+    - uses: actions/checkout@v4
+
     - name: Set up Python ${{ matrix.python-version }}
-      uses: actions/setup-python@v4
+      uses: actions/setup-python@v5
       with:
         python-version: ${{ matrix.python-version }}
+
+    - name: Install uv
+      uses: astral-sh/setup-uv@v3
+      with:
+        enable-cache: true
+        cache-dependency-glob: "uv.lock"
+
     - name: Set up Node.js
-      uses: actions/setup-node@v3
+      uses: actions/setup-node@v4
       with:
         node-version: '18'
+
     - name: Install Node.js dependencies
       run: |
         npm install -g icsorg
+
     - name: Install Python dependencies
       run: |
-        python -m pip install --upgrade pip
-        python -m pip install pytest pytest-cov
-        if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
-        pip install -e .[dev]
+        uv sync --all-extras --dev
+
     - name: Test with pytest
       run: |
-        pytest --cov=src tests/
+        uv run pytest --cov=src tests/
 
   publish:
     needs: test
@@ -44,26 +52,36 @@ jobs:
     if: startsWith(github.ref, 'refs/tags/v')
 
     steps:
-    - uses: actions/checkout@v3
+    - uses: actions/checkout@v4
+
     - name: Set up Python
-      uses: actions/setup-python@v4
+      uses: actions/setup-python@v5
       with:
         python-version: '3.11'
-    - name: Install dependencies
-      run: |
-        python -m pip install --upgrade pip
-        pip install build twine setuptools wheel
-    - name: Generate README.md from README.org
-      run: |
-        python scripts/generate_readme_md.py
-    - name: Generate README.md from README.org
-      uses: docker://pandoc/core:3.5
+
+    - name: Install uv
+      uses: astral-sh/setup-uv@v3
       with:
-        args: "-t markdown -f org -o README.md README.org"
-    - name: Build and publish
+        enable-cache: true
+        cache-dependency-glob: "uv.lock"
+
+    - name: Install pandoc
+      run: |
+        sudo apt-get update
+        sudo apt-get install -y pandoc
+
+    - name: Generate README.md from README.org
+      run: |
+        pandoc -f org -t markdown README.org -o README.md
+
+    - name: Build package
+      run: |
+        uv build
+
+    - name: Publish to PyPI
       env:
         TWINE_USERNAME: ${{ secrets.PYPI_USERNAME }}
         TWINE_PASSWORD: ${{ secrets.PYPI_PASSWORD }}
       run: |
-        python -m build
+        uv pip install --system twine
         twine upload dist/*
